# redactly

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: redactly_config.py  test.py
src/redactly/: __init__.py  config.py  detector.py  exceptions.py  logger.py  masker.py  policy.py  rules.py  utils.py  warnings.py
src/redactly/detectors/: __init__.py  entropy.py  key_based.py  regex.py
tests/: conftest.py  test_block_mode.py  test_config.py  test_coverage.py  test_detector_entropy.py  test_detector_key_based.py  test_detector_regex.py  test_logger.py  test_masker.py  test_policy.py  test_structured.py  test_warnings.py
