[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redactly"
version = "0.1.0"
description = "Safe logging SDK for Python that prevents accidental PII and secret leakage."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Shobhit", email = "smartyshobhit@gmail.com" }]
keywords = ["logging", "pii", "secrets", "redaction", "masking", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.13.0",
    "regex>=2026.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/segwise/redactly"

[tool.hatch.build.targets.wheel]
packages = ["src/redactly"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.13"
files = ["src/redactly"]

[[tool.mypy.overrides]]
module = ["regex"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=redactly --cov-report=term-missing"
